Changelog for HTML-Tree

{{$NEXT}}

4.901    2012-06-06
   Trial Release by Christopher J. Madsen

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * new_from_file now dies if the file cannot be opened.  $! records
      the specific problem.  (Previously, you got a tree with a few
      implicit elements.)
    * Some methods normally returning a scalar could return the empty
      list in certain circumstances.  This has been corrected.  The
      affected methods are: address, deobjectify_text, detach, is_inside,
      & pindex.

    [FIXES]
    * new_from_url did not call eof after parsing

    [DOCUMENTATION]
    * Improve SEE ALSO for HTML::TreeBuilder
    * General documentation cleanup


4.900    2012-06-01
   Trial Release by Christopher J. Madsen

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * Use weak references to avoid memory leaks
      See "Weak References" in HTML::Element for details.
    * deprecate the Version sub/method.  Use the VERSION method instead.

    [ENHANCEMENTS]
    * add new_from_url (Using LWP) (David Pottage) (RT #68097)


4.2      2011-04-06
   Release by Jeff Fearn

    [FIXES]
    * Tied all $VERSION to HTML::Element to ensure latest package is used
      for all modules. RT #66110
    * Moved perlcritic tests to xt/author
    [DOCUMENTATION]
    * Added text and link to "Perl and LWP" book.
    * Fix Authors is all PM files.


4.1      2010-10-25
   Release by Jeff Fearn

    [FIXES]
    * '/' is a valid attribute (pull from tokuhirom) (RT #61809)
    * Change check fo subclasses in as_HTML. (RT #61673)
    * Fix ProhibitThreeArgumentOpen being triggered. (RT #61857)


4.0      2010-09-20
   Release by Jeff Fearn

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * Changes to entity encoding from ord values to XML entities may break
      tests expecting &#00; style encoding.
    * Attribute names are now validated in as_XML and invalid names will
      cause an error.

    [FIXES]