@@ -2,6 +2,10 @@ Changelog for HTML-Tree
 
 {{$NEXT}}
 
+    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
+    * new_from_url now dies if the request fails or the response is not HTML
+
+
 4.901    2012-06-06
    Trial Release by Christopher J. Madsen
 
